# docker-cf-mnet-server

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TESTING.md  TODO.md  docker-compose.yml  pyproject.toml  test-compose.yml
.github/: CODEOWNERS
.github/workflows/: merge.yml  pr.yml  tag.yml
SourceCode/: generate.py  server.py
